@@ -1,22 +1,22 @@
 This package is part of the GridFTP component
 of the Globus Toolkit. For more information visit:
 
-http://www.globus.org/toolkit/docs/latest-stable/data/gridftp/
+http://toolkit.globus.org/toolkit/docs/latest-stable/gridftp/
 
 Admin Guide:
-http://www.globus.org/toolkit/docs/latest-stable/data/gridftp/admin/
+http://toolkit.globus.org/toolkit/docs/latest-stable/gridftp/admin/
 
 Developer's Guide:
-http://www.globus.org/toolkit/docs/latest-stable/data/gridftp/developer/
+http://toolkit.globus.org/toolkit/docs/latest-stable/gridftp/developer/
 
 Release Notes:
-http://www.globus.org/toolkit/docs/latest-stable/data/gridftp/rn/
+http://toolkit.globus.org/toolkit/docs/latest-stable/gridftp/rn/
 
 Public Interface Guide:
-http://www.globus.org/toolkit/docs/latest-stable/data/gridftp/pi/
+http://toolkit.globus.org/toolkit/docs/latest-stable/gridftp/pi/
 
 Quality Profile:
-http://www.globus.org/toolkit/docs/latest-stable/data/gridftp/qp/
+http://toolkit.globus.org/toolkit/docs/latest-stable/gridftp/qp/
 
 Migrating Guide:
-http://www.globus.org/toolkit/docs/latest-stable/data/gridftp/mig/
+http://toolkit.globus.org/toolkit/docs/latest-stable/gridftp/mig/
