@@ -1,3 +1,9 @@
+globus-gass-copy (9.14-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix user-specified data channel stack handling
+
+ -- Globus Toolkit <support@globus.org>  Wed, 08 Apr 2015 12:57:24 -0400
+
 globus-gass-copy (9.13-1+gt6.@distro@) @distro@; urgency=low
 
   * doxygen fixes
